# ipz-spark-bq-pipeline

./: README.md
iot_telemetry_data_server/: pyproject.toml
iot_telemetry_data_server/iot_telemetry_data_server/: __init__.py  server.py
stream_processor/: .gitignore  pyproject.toml
stream_processor/stream_processor/: __init__.py  bigquery_loader.py  merger.py  stream_processor_bigquery.py  stream_processor_csv.py
